<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fstly Gallery</string>
    <string name="ingresa_pin">Ingresá tu PIN</string>
    <string name="crea_pin">Creá tu PIN (4 dígitos)</string>
    <string name="confirma_pin">Confirmá tu PIN</string>
    <string name="confirmar">Confirmar</string>
    <string name="pin_incorrecto">PIN incorrecto. Intentá de nuevo.</string>
    <string name="pin_no_coincide">Los PIN no coinciden. Intentá de nuevo.</string>
    <string name="no_hay_fotos">No hay fotos en tu galería</string>
    <string name="foto">Foto</string>
    <string name="video">Video</string>
    <string name="reproducir">Reproducir</string>
    <string name="cerrar">Cerrar</string>
    <string name="atras">Atrás</string>
    <string name="favorito">Favorito</string>
    <string name="favoritos">Favoritos</string>
    <string name="no_hay_favoritos">No tenés fotos favoritas todavía</string>
    <string name="menu">Menú</string>
    <string name="info">Información</string>
    <string name="borrar">Borrar</string>
    <string name="compartir">Compartir</string>
    <string name="confirmar_borrar">¿Borrar esto? No se puede recuperar.</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="cancelar">Cancelar</string>
    <string name="foto_borrada">Se borró correctamente.</string>
    <string name="fotos_borradas">Se borraron %d elementos correctamente.</string>
    <string name="error_borrar">No se pudo borrar. Intentá de nuevo.</string>
    <string name="confirmar_borrar_multiples">¿Borrar %d elementos? No se pueden recuperar.</string>
    <string name="elementos">%d elementos</string>
    <string name="ajustes">Ajustes</string>
    <string name="seguridad">Seguridad</string>
    <string name="cambiar_pin">Cambiar PIN</string>
    <string name="confirmar_cambiar_pin">¿Querés cambiar tu PIN? Vas a tener que crear uno nuevo.</string>
    <string name="aviso_cambiar_pin">Vas a tener que crear un PIN nuevo. NO HAY RECUPERACIÓN: si lo olvidás, no vas a poder entrar a la app y vas a perder la Bóveda. ¿Continuar?</string>
    <string name="apariencia">Apariencia</string>
    <string name="fuentes">Fuentes</string>
    <string name="fuentes_sistema">Fuentes del sistema</string>
    <string name="fuentes_personalizadas">Fuentes personalizadas</string>
    <string name="importar_fuente">Importar fuente (.ttf / .otf)</string>
    <string name="sin_fuentes_personalizadas">No tenés fuentes personalizadas. Importá una con el botón de arriba.</string>
    <string name="fuente_aplicada">Fuente aplicada correctamente.</string>
    <string name="fuente_importada">Fuente importada correctamente.</string>
    <string name="error_importar_fuente">No se pudo importar la fuente. Verificá que sea un archivo .ttf o .otf.</string>
    <string name="eliminar_fuente">Eliminar fuente</string>
    <string name="confirmar_eliminar_fuente">¿Eliminar la fuente %s? No se puede recuperar.</string>
    <string name="usar_fuente_sistema">Usar fuente del sistema</string>
    <string name="descripcion_fuente_sistema">Restaura la fuente predeterminada de Android. Se aplica a todos los textos de la app.</string>
    <string name="acerca_de">Acerca de</string>
    <string name="licencia">GPLv3 - Código abierto</string>
    <string name="version_app">Fstly Gallery 0.4.4</string>
    <string name="olvidaste_pin">¿Olvidaste tu PIN?</string>
    <string name="mensaje_olvido">Si reseteás el PIN, vas a tener que crear uno nuevo. ¿Querés continuar?</string>
    <string name="resetear_pin">Resetear PIN</string>
    <string name="advertencia_pin">Anotá tu PIN. NO HAY RECUPERACIÓN: si lo olvidás, no vas a poder entrar y vas a perder la Bóveda.</string>
    <string name="carpeta">Carpeta</string>
    <string name="buscar">Buscar</string>
    <string name="editar">Editar</string>
    <string name="rotar">Rotar</string>
    <string name="voltear">Voltear</string>
    <string name="recortar">Recortar</string>
    <string name="guardar">Guardar</string>
    <string name="sobrescribir">Sobrescribir</string>
    <string name="guardar_copia">Guardar copia</string>
    <string name="pregunta_guardar">¿Cómo querés guardar los cambios?</string>
    <string name="foto_guardada">Los cambios se guardaron correctamente.</string>
    <string name="salir_sin_guardar">Salir sin guardar</string>
    <string name="mensaje_salir">Tenés cambios sin guardar. Si salís ahora, se van a perder. ¿Querés salir igual?</string>
    <string name="salir">Salir</string>
    <string name="quedarme">Quedarme</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="seleccionados">%d seleccionados</string>
    <string name="favoritos_marcados">Se marcaron %d elementos como favoritos.</string>
    <string name="boveda">Bóveda</string>
    <string name="boveda_vacia">La Bóveda está vacía. Movés fotos desde el visor.</string>
    <string name="ingresa_pin_boveda">Ingresá tu PIN para acceder a la Bóveda</string>
    <string name="mover_a_boveda">Mover a Bóveda</string>
    <string name="ya_en_boveda">Este archivo ya está en la Bóveda.</string>
    <string name="confirmar_mover_boveda">¿Mover esta foto a la Bóveda? Ya no se verá en la galería normal.</string>
    <string name="movida_a_boveda">Se movió a la Bóveda. Ya no se ve en la galería.</string>
    <string name="error_mover">No se pudo mover a la Bóveda. Intentá de nuevo.</string>
    <string name="aviso_boveda">Este archivo se va a cifrar. Si desinstalás la app o borrás los datos, VAS A PERDER EL ARCHIVO. Asegurate de recordar el PIN de la app. ¿Continuar?</string>
    <string name="entendido">Entendido</string>
    <string name="sacar_de_boveda">Sacar de Bóveda</string>
    <string name="confirmar_sacar_boveda">¿Sacar este archivo de la Bóveda? Se va a descifrar y guardar en su carpeta.</string>
    <string name="sacada_de_boveda">Se sacó de la Bóveda y se guardó correctamente.</string>
    <string name="error_sacar">No se pudo sacar de la Bóveda. Intentá de nuevo.</string>
    <string name="confirmar_borrar_boveda">¿Borrar este archivo de la Bóveda? No se puede recuperar.</string>
    <string name="papelera">Papelera</string>
    <string name="abrir_papelera">Abrir papelera</string>
    <string name="papelera_vacia">La papelera está vacía.</string>
    <string name="info_papelera">Los archivos se borran automáticamente después de 30 días.</string>
    <string name="vaciar_papelera">Vaciar papelera</string>
    <string name="confirmar_vaciar_papelera">¿Vaciar la papelera? Se van a borrar todos los archivos para siempre. No se puede recuperar.</string>
    <string name="papelera_vaciada">Se borraron %d archivos definitivamente.</string>
    <string name="restaurar">Restaurar</string>
    <string name="borrar_definitivamente">Borrar definitivamente</string>
    <string name="confirmar_borrar_definitivo">¿Borrar este archivo para siempre? No se puede recuperar.</string>
    <string name="archivo_restaurado">El archivo se restauró correctamente.</string>
    <string name="error_restaurar">No se pudo restaurar. Intentá de nuevo.</string>
    <string name="dias_restantes">Se borra en %d días.</string>
    <string name="mover_a_papelera">Mover a papelera</string>
    <string name="borrar_directo">Borrar definitivamente</string>
    <string name="pregunta_borrar">¿Qué querés hacer con este archivo?</string>
    <string name="movida_a_papelera">Se movió a la papelera. Se borra en 30 días.</string>
    <string name="error_mover_papelera">No se pudo mover a la papelera. Intentá de nuevo.</string>
</resources>
